@@ -7,7 +7,8 @@ Vcs-Browser: http://anonscm.debian.org/viewvc/glibc-bsd/trunk/kfreebsd-@major@/
 Vcs-Svn: svn://anonscm.debian.org/glibc-bsd/trunk/kfreebsd-@major@/
 Build-Depends: debhelper (>= 5.0.0), bzip2, sharutils, flex-old | flex,
  freebsd-buildutils (>= 10.0~svn259404-3),
- freebsd-glue (>= 0.1.5),
+ freebsd-glue (>= 0.2.8~),
+ bmake (>= 20131001-1~),
  byacc,
  @cc_pkg@, libdb-dev,
  libsbuf-dev (>= 9.0+ds1-2),
